--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(tmc2209 INTERFACE)
+add_library(pico_tmc2209 INTERFACE)
 
-target_sources(tmc2209 INTERFACE
+target_sources(pico_tmc2209 INTERFACE
  ${CMAKE_CURRENT_LIST_DIR}/common.c
  ${CMAKE_CURRENT_LIST_DIR}/tmc_interface.c
 #  ${CMAKE_CURRENT_LIST_DIR}/tmc2130.c
@@ -16,11 +16,11 @@ target_sources(tmc2209 INTERFACE
 #  ${CMAKE_CURRENT_LIST_DIR}/tmc5160hal.c
 )
 
-target_include_directories(tmc2209 INTERFACE 
+target_include_directories(pico_tmc2209 INTERFACE 
     ${CMAKE_CURRENT_LIST_DIR}
     ${CMAKE_CURRENT_LIST_DIR}/pio-uart
 )
 
 # Using pio-uart shim (bit-banged or PIO implementation)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/pio-uart)
-target_link_libraries(tmc2209 INTERFACE pio_uart_shim)
+target_link_libraries(pico_tmc2209 INTERFACE pio_sw_uart)
